karnc/tests/fixtures/negative/147_adapter_given_unknown_cap/src/tokens.binding.ts
import type { Jwt } from "./tokens.js";
export class JwksJwt implements Jwt {
  async verify(token: string): Promise<string> { return token; }
}
